2009-11-18  Patrick Mueller  <Patrick_Mueller@us.ibm.com>

        Reviewed by Pavel Feldman.

        Web Inspector - remember last script displayed in Scripts panel
        https://bugs.webkit.org/show_bug.cgi?id=27552

        Manual test added
        
        * inspector/front-end/ScriptsPanel.js:
        (WebInspector.ScriptsPanel.prototype.showScript):
        (WebInspector.ScriptsPanel.prototype.showResource):
        (WebInspector.ScriptsPanel.prototype._showScriptOrResource):
        (WebInspector.ScriptsPanel.prototype._addScriptToFilesMenu):
        (WebInspector.ScriptsPanel.prototype._callFrameSelected):
        (WebInspector.ScriptsPanel.prototype._goBack):
        (WebInspector.ScriptsPanel.prototype._goForward):
        * manual-tests/inspector/remember-last-script.html: Added.

2009-11-18  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Dimitri Glazkov.

        Win chromium is slow to draw transparent texts
        https://bugs.webkit.org/show_bug.cgi?id=31258

        Create bounded transparency layers instead of just clipping.

        No new tests because this is just a performance improvement.

        * platform/graphics/chromium/FontChromiumWin.cpp:
        (WebCore::TransparencyAwareFontPainter::TransparencyAwareFontPainter::initializeForGDI):

2009-11-18  Shu Chang  <Chang.Shu@nokia.com>

        Reviewed by Eric Seidel.

        [Qt] Add support for displaying deleteButton.
        https://bugs.webkit.org/show_bug.cgi?id=31560

        Test: LayoutTests/editing/deleting/5408255.html

        * WebCore.qrc:
        * platform/graphics/qt/ImageQt.cpp:
        (loadResourcePixmap):

2009-11-18  Mikhail Naganov  <mnaganov@chromium.org>

        Reviewed by Eric Seidel.

        Fix Qt build without JavaScript debugger.

        https://bugs.webkit.org/show_bug.cgi?id=31575

        * page/Console.idl:

2009-11-18  Daniel Bates  <dbates@webkit.org>

        Reviewed by Dave Hyatt.
